objects/tffa__Submission__c.object
<CustomObject>
    <description>Submission  is a collection of products which the party or group of parties wish to apply for. Models a group of applications of related product and services applied for together.</description>
    <fields>
        <fullName>AdditionalSource__c</fullName>
        <description>Sample custom field. Remove it in ur org.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AdditionalSource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdobeCampaignDesc__c</fullName>
        <description>ACC Detail description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AdobeCampaignDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdobeCampaignRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Adobe Campaign Retry Count</description>
        <label>AdobeCampaignRetryCount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZApplicantsNotCompletedCount__c</fullName>
        <description>Applicants Not Completed</description>
        <label>Applicants Not Completed</label>
        <summaryFilterItems>
            <field>tffa__SubmissionPartyXref__c.tffa__Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>tffa__SubmissionPartyXref__c.tffa__Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CZApplicantsNotPresentCount__c</fullName>
        <description>Applicants Not Present</description>
        <label>Applicants Not Present</label>
        <summaryFilterItems>
            <field>tffa__SubmissionPartyXref__c.tffa__IsPresent__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>tffa__SubmissionPartyXref__c.tffa__Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CZApplicantsNotPresentStatus__c</fullName>
        <description>Applicant Not Present Status</description>
        <formula>IF (CZApplicantsNotPresentCount__c =0,&quot;Not Applicable&quot;,( IF (CZApplicantsNotCompletedCount__c =0,&quot;Completed&quot;,&quot;Pending&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Not Present Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZApplicationProcessingError__c</fullName>
        <description>Account Processing Error Message</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Processing Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZApplicationProcessingStatus__c</fullName>
        <description>Application Processing Status</description>
        <label>Application Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN_PROGRESS</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>FAILED</fullName>
                    <label>Failed</label>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CZAuthenticationMethod__c</fullName>
        <description>Authentication Method used</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Authentication Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZDocusignDownloadRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Docusign Download Retry Count</description>
        <label>DocusignDownloadRetryCount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CZDocusignDownloadStatus__c</fullName>
        <description>Docusign Download Status</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Docusign Download Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZGoogleClickID__c</fullName>
        <description>Google Click ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Google Click ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZHearAboutUs__c</fullName>
        <description>Hear About Us</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hear AboutUs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZIsDebitCardProductSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is DebitCard Product Selected</description>
        <label>IsDebitCardProductSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CZOverrideComments__c</fullName>
        <description>Override Comments</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CZPendingEnvelopeCount__c</fullName>
        <description>Pending Envelope Count</description>
        <label>Pending Envelope Count</label>
        <summaryFilterItems>
            <field>tffa__DisclosureEnvelope__c.tffa__Status__c</field>
            <operation>equals</operation>
            <value>Generated</value>
        </summaryFilterItems>
        <summaryForeignKey>tffa__DisclosureEnvelope__c.tffa__Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CZRetryAccountOpening__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Retry Account Opening is set to true if Governor limit is reached</description>
        <label>Retry Account Opening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CZSignedEnvelopeCount__c</fullName>
        <description>Signed Envelope Count</description>
        <label>Signed Envelope Count</label>
        <summaryFilterItems>
            <field>tffa__DisclosureEnvelope__c.tffa__Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>tffa__DisclosureEnvelope__c.tffa__Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CZSigningStatus__c</fullName>
        <description>Signing Status</description>
        <formula>IF (CZPendingEnvelopeCount__c &gt;0,&quot;SIGNING_INCOMPLETE&quot;,( IF (AND(CZPendingEnvelopeCount__c =0,CZSignedEnvelopeCount__c&gt;0),&quot;SIGNING_COMPLETED&quot;,( IF (AND(CZPendingEnvelopeCount__c =0,CZSignedEnvelopeCount__c=0),&quot;NOT_STARTED&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisclosureConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disclosure Converted to PDF</description>
        <label>DisclosureConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCMUploadRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>FCM Upload Retry Count</description>
        <label>FCM Upload Retry Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCMUploadStatus__c</fullName>
        <description>Status of FCM Upload</description>
        <label>FCM Upload Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>FAILURE</fullName>
                </value>
                <value>
                    <fullName>MORE_INFO</fullName>
                    <label>MORE INFO</label>
                </value>
                <value>
                    <fullName>IN_PROGRESS</fullName>
                    <label>IN PROGRESS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISBranchCode__c</fullName>
        <description>FIS Branch Code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the branch code received in URL Parameter from marketing site.</inlineHelpText>
        <label>FIS Branch Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingVerificationReminderCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Funding Verification Reminder Count</description>
        <label>Funding Verification Reminder Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HasCrossSellSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If any of the cross sell applications are selected while submitting this application the flag will become true else it will be false</description>
        <label>HasCrossSellSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAccTransferred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Submission data is sent to Adobe Campaign</description>
        <label>IsAccTransferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCCTransDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Elavon Transaction is Deleted for Auth</description>
        <label>IsCCTransDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextFundingVerificationReminderDate__c</fullName>
        <description>Next Funding Verification Reminder Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Funding Verification Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrimaryPartyName__c</fullName>
        <description>name of primary party the submission is associated with</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <description>State Code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>StateCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrlParams__c</fullName>
        <description>Parameters that is received in URL by TF from marketing site.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UrlParams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>Zip Code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ZipCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPartyNotPresent__c</fullName>
        <description>if one of the party is not present into the submission the value will be 0</description>
        <label>isPartyNotPresent</label>
        <summarizedField>tffa__SubmissionPartyXref__c.isPartyCompleteCount__c</summarizedField>
        <summaryForeignKey>tffa__SubmissionPartyXref__c.tffa__Submission__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__AbandonedOn__c</fullName>
        <description>Date and time on which submission was abandoned.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Abandoned on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__Abandoned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the submission was abandoned (status=ABANDONED). Useful in reporting. e.g. report conversion rate for abandoned Application(s).</description>
        <label>Abandoned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Amount__c</fullName>
        <description>Sum of amounts captured in deposit applications for consolidated funding.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__BrandEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current brand of the submission</description>
        <label>Brand</label>
        <referenceTo>tffa__Brand__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Brand__c</fullName>
        <description>Brand code of the Brand for the submission if applicable</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BundleCode__c</fullName>
        <description>Unique product bundle code maintained in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bundle Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BundleName__c</fullName>
        <description>Unique product bundle name maintained in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bundle name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Bundle__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Bundle code identifier</description>
        <label>Bundle</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product Bundle not valid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Type__c</field>
                <operation>equals</operation>
                <value>Bundle</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__BusinessUnit__c</fullName>
        <description>the business unit which owns this application. This will be auto computed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Campaign__c</fullName>
        <description>The individual campaign name, slogan, promo code associated with the submission. Aligns with utm_campaign parameter.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CancellationComments__c</fullName>
        <description>Additional notes on why the submission was cancelled. The cancellation applies to all the applications under the submission.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cancellation comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__CancellationReason__c</fullName>
        <description>Reason why the submission was cancelled. The cancellation applies to all the applications under the submission.</description>
        <label>Cancellation reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationCancellationReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CancelledBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who cancelled the submission.</description>
        <label>Cancelled by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CancelledSubmissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Channel__c</fullName>
        <defaultValue>&quot;BRANCH&quot;</defaultValue>
        <description>Keeps track of current channel.</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Comments__c</fullName>
        <description>Additional notes (may not be specific to a flow) captured on a submission.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__CostCenterCode__c</fullName>
        <description>A cost center is any unit of an organisation to which costs or expenses are allocated to these units</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Center Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CreatedChannel__c</fullName>
        <defaultValue>&quot;BRANCH&quot;</defaultValue>
        <description>Type of the channel from which the application has been originated.</description>
        <label>Created Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditDecisionOutcome__c</fullName>
        <description>A rollup of DecisionOutcome(s) of associated Application(s). Typically set to the worst among the Application(s).</description>
        <label>Credit Decision outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DeviceBrowser__c</fullName>
        <description>The browser of the client creating the submission</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationCity__c</fullName>
        <description>The city of the device</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationContinent__c</fullName>
        <description>The continent where device located</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location Continent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationCountry__c</fullName>
        <description>The country where device located</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationState__c</fullName>
        <description>The state (address) where the device resides.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationZipCode__c</fullName>
        <description>The device zip code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location Zip code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocation__c</fullName>
        <description>Specifies the precise geolocation of the device from which submission was made. A device&apos;s IP can be used to derive this value within some degree of confidence.</description>
        <label>Device Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceOS__c</fullName>
        <description>The OS of the client creating the submission</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceOrientation__c</fullName>
        <description>Orientation of the device captured while creating the submission</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device orientation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DevicePixelRatio__c</fullName>
        <description>Pixel ratio of the device from which submission is created</description>
        <label>Device pixel ratio</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Device__c</fullName>
        <description>Identifier of the device from which submission is created</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DisclosureDeliveryType__c</fullName>
        <description>Indicates delivery mode opted for disclosures of the current submission</description>
        <label>Disclosure delivery type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DisclosureDeliveryType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ElapsedDays__c</fullName>
        <description>Elapsed number of days from creation of the submission.</description>
        <formula>TODAY()- DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FilledJointly__c</fullName>
        <defaultValue>true</defaultValue>
        <description>In case of joint application, this flag signifies if the data has been filled jointly by all the applicants. Default is true.</description>
        <label>Filled jointly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Flow__c</fullName>
        <description>Name of the flow from where the current submission has been initiated. This value will be used to navigate to the respective url in case of resume submission use case. Possible values are - deposits, consumer, smb etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__HasEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true is submission has employee product and party</description>
        <label>Has Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasExistingParty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the primary party existing customer</description>
        <label>Has Existing Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasExternalDisclosures__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if disclosures are generated by external system</description>
        <label>Has External Disclosures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasLendingProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true is submission has lending products</description>
        <label>HasLendingProducts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasMortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if submission has mortgage product</description>
        <label>Has mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasRecommendations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Recommendation was suggested for crosssell</description>
        <label>Has CrossSell Products Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasTrustParty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true is submission has trust applicants</description>
        <label>Has Trust Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IpAddress__c</fullName>
        <description>IP address of the device</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ip address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsAssisted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the application data capture has been assisted by a banker or call center agent.</description>
        <label>Is assisted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsFundingCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true if funding request is captured at submission</description>
        <label>Funding captured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsFundingIdentityMismatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True , if there is a suspected identity mismatch between primary applicant and the owner of the funding source account</description>
        <label>Is Funding Identity Mismatch ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsOwnedByCurrentUser__c</fullName>
        <description>Indicates whether the submission is owned by the current (contextual) user.</description>
        <formula>OwnerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owned by Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRemoteDisclosureCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if disclosures are accepted remotely</description>
        <label>Is remote disclosure captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRemoteFundingCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if funding request is captured remotely</description>
        <label>Is remote funding captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__KYCApprovalReason__c</fullName>
        <description>Reason for approving the application in KYC decisioning stage.</description>
        <label>KYC Approval Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__KYCApprovalReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionOutcome__c</fullName>
        <description>A rollup of DecisionOutcome(s) of associated Application(s). Typically set to the worst among the Application(s).</description>
        <label>KYC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionOverrideComments__c</fullName>
        <description>Additional notes stating why the auto KYCDecisionOutcome was overridden.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC Decision Override Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__KYCDeclinedReason__c</fullName>
        <description>Reason for declining the application in KYC decisioning stage.</description>
        <label>KYC Declined Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__KYCDeclinedReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__LastResumedOn__c</fullName>
        <description>Date on which submission was last resumed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Resumed datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__LastSavedOn__c</fullName>
        <description>Date and time on which submission was last saved as draft (status=SAVED).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Saved on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__Locale__c</fullName>
        <description>Captures language for the submission decided based on the applicant</description>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__LocationCode__c</fullName>
        <description>Unique code of the current geographical location/branch of the submission.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Location(Branch) code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current geographical location/branch of the submission. This will be computed and be useful for regulations.</description>
        <label>Location(Branch)</label>
        <referenceTo>tffa__Location__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Medium__c</fullName>
        <description>The advertising, marketing or traffic medium associated with the submission. e.g. direct, email, referral, etc. More granular than channel. Aligns with utm_medium parameter.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfApplications__c</fullName>
        <description>The total number of applications in the submission.</description>
        <label>Number of applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfBorrowers__c</fullName>
        <description>Number of borrowers applying for the lending application</description>
        <label>Number of borrowers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfInactiveParties__c</fullName>
        <description>Number of parties of inactive (or removed) parties in the submission.</description>
        <label>Number of Inactive Parties</label>
        <summaryFilterItems>
            <field>tffa__SubmissionPartyXref__c.tffa__Active__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>tffa__SubmissionPartyXref__c.tffa__Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>